# OOP_lab3

./: CMakeLists.txt  lab3.cpp
include/: figure.h  rectangle.h  rhombus.h  trapezoid.h
src/: figure.cpp  rectangle.cpp  rhombus.cpp  trapezoid.cpp
test/: tests.cpp
